# jrte-corpus_example

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  train.py
.github/workflows/: ci.yml  lint.yml
