[tool.poetry]
name = "jrte-corpus_example"
version = "0.1.0"
description = ""
authors = ["Yuta Hayashibe <hayashibe@megagon.ai>"]

[tool.poetry.dependencies]
python = "^3.7"
transformers = {extras = ["serving"], version = "^4.9.1"}
torch = "^1.9.0"
fugashi = "^1.1.1"
unidic-lite = "^1.0.8"
fastapi = "^0.68.0"
unicorn = "^1.0.3"

[tool.poetry.dev-dependencies]
flake8 = ">=3.8.4"
isort = ">=5.6.4"
pydocstyle = ">=6.1.1"
yamllint = "^1.26.2"
black = "^21.10b0"
pyright = "^0.0.10"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
